# deps_openssl

./: CMakeLists.txt
resources/: macros.cmake
resources/openssl_101e_cmake/: CMakeLists.txt
resources/openssl_cmake/: CMakeLists.txt
resources/openssl_cmake/include_windows_amd64_msvc/: buildinf.h  opensslconf.h
resources/openssl_cmake/include_windows_i386_msvc/: buildinf.h  opensslconf.h
